# msgforwarder

./: README.rst  forwarder.py  requirements.txt  setup.cfg
msgforwarder/: forwarder.py  logger.py
msgforwarder/transports/: gitter.py  irc.py  telegram.py  transport.py
