[metadata]
name = msgforwarder
summary = Forwarder - is a simple irc bot for synchronizing messages between
    different channels and networks(IRC, Gitter, etc).
author = Andrey Kurilin
license = Apache License, Version 2.0
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    msg_forwarder

[entry_points]
console_scripts =
    msgforwarder = msgforwarder.forwarder:run

[global]
setup-hooks =
    pbr.hooks.setup_hook
